welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ';' expected but '=' found.
diviseParDeux(x: Double): Double = {
                                 ^