welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
diviseParDeux(x: Double): Double = {
     return x / 2
}